--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,7 +11,7 @@
 # -----------------
 en: &DEFAULT_EN
   nav:
-    - title: "FORMATO APA"
+    - title: "Services"
       section: services
     - title: "Portfolio"
       section: portfolio
