--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,13 +11,18 @@
 # -----------------
 en: &DEFAULT_EN
   nav:
-    - title: "Services"
+    - title: "FORMATO APA"
       section: services
     - title: "Portfolio"
       section: portfolio
-    - title: "About"
+    - title: "EQUIPO 6"
       section: about
-    - title: "Timeline"
+    - title: "Somos un equipo de la carrera de Ingenieria en Sistemas Computacionales del TecNM Colima. Este proyecto forma parte de la asignatura de Metodología de la Investigación, se trata de una página web que nos permite explorar las distintas maneras de citar y referenciar en formato APA  
+        juan carlos Ramirez Martinez  
+        Alison Daiana Cortes Cruz  
+        Hilda Yolana Solis Mosqueda  
+        Xaana Mayte Sandoval Estrella  
+        Zeus Emir Zamora Alvarez"
       section: timeline
     - title: "Team"
       section: team
