--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,8 +18,7 @@ en: &DEFAULT_EN
     - title: "EQUIPO 6"
       section: about
     - title: "Somos un equipo de la carrera de Ingenieria en Sistemas Computacionales del TecNM Colima. Este proyecto forma parte de la asignatura de Metodología de la Investigación, se trata de una página web que nos permite explorar las distintas maneras de citar y referenciar en formato APA  
-        juan carlos Ramirez Martinez  
-        Alison Daiana Cortes Cruz  
+        juan carlos Ramirez Martinez  Alison Daiana Cortes Cruz  
         Hilda Yolana Solis Mosqueda  
         Xaana Mayte Sandoval Estrella  
         Zeus Emir Zamora Alvarez"
