--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -13,26 +13,26 @@
 # Spanish
 # -------
 es: &DEFAULT_ES
-  header:
-    title: ¡Bienvenido a nuestro Estudio!
-    text: Es un placer conocerle
-    button: Ver más
-    buttonlink: "#servicios"
+  # header:
+  #   title: ¡Bienvenido a nuestro Estudio!
+  #   text: Es un placer conocerle
+  #   button: Ver más
+  #   buttonlink: "#servicios"
 
   services:
     title: "Servicios"
     text: "FORMATO APA"
     section: servicios
-    list:
-      - title: "Comercio Electrónico"
-        desc: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit."
-        icon: fas fa-shopping-cart #find more at https://fontawesome.com/icons
-      - title: "Diseño Responsivo"
-        desc: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit."
-        icon: fas fa-laptop
-      - title: "[Markdown](https://en.wikipedia.org/wiki/Markdown)"
-        desc: "Su descripción aquí, soporte completo de **Markdown**"
-        icon: fab fa-markdown
+    # list:
+    #   - title: "Comercio Electrónico"
+    #     desc: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit."
+    #     icon: fas fa-shopping-cart #find more at https://fontawesome.com/icons
+    #   - title: "Diseño Responsivo"
+    #     desc: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit."
+    #     icon: fas fa-laptop
+    #   - title: "[Markdown](https://en.wikipedia.org/wiki/Markdown)"
+    #     desc: "Su descripción aquí, soporte completo de **Markdown**"
+    #     icon: fab fa-markdown
 
   portfolio:
     title: "Portafolio"
